showing data :sparkles:

--- a/src/main/resources/static/views/roles.html
+++ b/src/main/resources/static/views/roles.html
@@ -1,5 +1,8 @@
 <div class="section">
     <h3>{{headingTitle}}</h3>
+    <p>{{view.data}}</p>
+    <p ng-repeat="bar in view.data">
+        {{bar.restaurantName}}</p>
     <div>
         <ul type="square">
             <li>Luke</li>
