--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,6 @@
 /* entire container, keeps perspective */
 .flip-container {
-    height: 100px;
-    width: 800px;
+    perspective: 1000px;
 }
 /* flip the pane when hovered */
 .flip-container:hover .flipper, .flip-container.hover .flipper {
