--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,6 +1,7 @@
 /* entire container, keeps perspective */
 .flip-container {
     perspective: 1000px;
+    margin-bottom: 25px;
 }
 /* flip the pane when hovered */
 .flip-container:hover .flipper, .flip-container.hover .flipper {
@@ -8,13 +9,13 @@
 }
 
 .flip-container, .front, .back {
-    width: 320px;
-    height: 480px;
+    width: 100%;
+    height: 100px;
 }
 
 /* flip speed goes here */
 .flipper {
-    transition: 0.6s;
+    transition: 0.9s;
     transform-style: preserve-3d;
     position: relative;
 }
@@ -33,6 +34,9 @@
     z-index: 2;
     /* for firefox 31 */
     transform: rotateY(0deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* back, initially hidden pane */
@@ -42,4 +46,14 @@
 
 .flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
     transform: rotateY(180deg);
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.barName {
+    display: flex;
+    text-align: center;
+    color: white;
+    font-size: 3.5em;
 }
