--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -44,11 +44,6 @@
 /* back, initially hidden pane */
 .back {
     transform: rotateY(180deg);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    opacity: 0.5;
 }
 
 .flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
@@ -69,4 +64,10 @@ img {
     position: absolute;
     z-index: 0;
     opacity: 0.5;
+}
+.url {
+    text-align: center;
+}
+.name {
+    text-align: center;
 }
