--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -14,26 +14,17 @@
     </div>
 
     <div class="container">
-            <a href="/addHappyHour">Add New Happy Hour</a>
+        <a href="/addHappyHour">Add New Happy Hour</a>
     </div>
 
-<div class="container">
-    <div class="col-sm-6 col-lg-4 col-xs-12" ng-repeat="bar in view.data | filter: search">
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-                <div class="front filter">
-                    <img ng-src="{{bar.imageUrl}}"/>
-                    <p class="barName">{{bar.restaurantName}}</p>
-                </div>
-                <div class="back">
-                    <div class="row">
-                        <div class="col-md-12 name">
-                            <h3 class="restaurant">
-                                <a ng-href="{{bar.websiteUrl}}" class="websiteUrl">
-                                    {{bar.restaurantName}}
-                                </a>
-                            </h3>
-                        </div>
+    <div class="container">
+        <div class="col-sm-6 col-lg-4 col-xs-12" ng-repeat="bar in view.data | filter: search">
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                <div class="flipper">
+                    <div class="front filter">
+                        <img ng-src="{{bar.imageUrl}}"/>
+                        <A NAME="{{bar.restaurantName}}" class="no-underline"></A>
+                        <p class="barName">{{bar.restaurantName}}</p>
                     </div>
                     <div class="back">
                         <div class="row">
